<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewSplashtitle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/abaco"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bienvenido"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nombre de usuario "
            android:textSize="15sp"
            android:textColor="@color/colorLightPurple"
            android:gravity="start"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/rounded_edit_text"
            android:selectAllOnFocus="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contraseña "
            android:textSize="15sp"
            android:textColor="@color/colorLightPurple"
            android:gravity="start"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack"
            android:background="@drawable/rounded_edit_text"
            android:selectAllOnFocus="true" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorWhite"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="45dp"
            android:paddingLeft="45dp"
            android:background="@drawable/rounded_edit_text_blue"/>

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/redirectRegister"
            android:textSize="15sp"
            android:textColor="@color/colorLightPurple">



        </TextView>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </LinearLayout>







</LinearLayout>