<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/colorWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="¡Registrate!"
                    android:textSize="30sp"
                    android:textColor="@color/colorBlack"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/imageViewSplashtitle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/lapiz"
                    tools:ignore="VectorDrawableCompat"
                    android:contentDescription="TODO" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nombre de usuario "
                    android:textSize="15sp"
                    android:textColor="@color/colorLightPurple"
                    android:gravity="start"/>
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/rounded_edit_text"
                    android:selectAllOnFocus="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Edad"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorLightPurple"
                    android:gravity="start"/>
                <Spinner
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contraseña"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorLightPurple"
                    android:gravity="start"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/rounded_edit_text"
                    android:selectAllOnFocus="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Confirmar contraseña"
                    android:textSize="15sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorLightPurple"
                    android:gravity="start"/>
                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/rounded_edit_text"
                    android:selectAllOnFocus="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Registrarse"
                    android:textColor="@color/colorWhite"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingRight="45dp"
                    android:paddingLeft="45dp"
                    android:background="@drawable/rounded_edit_text_blue"/>

                <TextView
                    android:id="@+id/txt_have_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/have_account"
                    android:textSize="15sp"
                    android:textColor="@color/colorLightPurple">
                </TextView>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>





</LinearLayout>